emx2-hpc, various Sonar code quality complaints addressed